--- a/symfony/.env
+++ b/symfony/.env
@@ -22,7 +22,7 @@ APP_SECRET=caa4ab3a2f028dd708de4b71ccdb70c2
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:secret@127.0.0.1:3306/rss
+DATABASE_URL=mysql://user:qwerty@altakrss_db_1:3306/rss
 
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
@@ -34,6 +34,5 @@ JWT_TTL=3600
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-#MAILER_URL=gmail://altakrssapp:AltakRSS228@localhost
-MAILER_URL=null://localhost
+MAILER_URL=gmail://altakrssapp:AltakRSS228@localhost
 ###< symfony/swiftmailer-bundle ###
