--- a/symfony/.env
+++ b/symfony/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=caa4ab3a2f028dd708de4b71ccdb70c2
 ###< symfony/framework-bundle ###
 
