--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,4 @@
-# Symfony application's path (absolute or relative)
+# application's path (absolute or relative)
 SYMFONY_APP_PATH=../symfony
 ANGULAR_APP_PATH=../angular
 
