--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -7,9 +7,12 @@ RUN apt-get update && apt-get install -y \
 
 ADD nginx.conf /etc/nginx/
 ADD symfony.conf /etc/nginx/sites-available/
+ADD angular.conf /etc/nginx/sites-available/
 
 RUN ln -s /etc/nginx/sites-available/symfony.conf /etc/nginx/sites-enabled/symfony \
-&& rm /etc/nginx/sites-enabled/default
+    && ln -s /etc/nginx/sites-available/angular.conf /etc/nginx/sites-enabled/angular \
+    && rm /etc/nginx/sites-enabled/default \
+    && echo "symfony.local localhost\nangular.local localhost" >> /etc/hosts
 
 RUN echo "upstream php-upstream { server php:9000; }" > /etc/nginx/conf.d/upstream.conf
 
