--- a/docker/nginx/angular.conf
+++ b/docker/nginx/angular.conf
@@ -9,6 +9,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
+    location /api {
+        proxy_pass http://symfony.local;
+        proxy_set_header Host symfony.local;
+    }
+
     error_log /var/log/nginx/angular_error.log;
     access_log /var/log/nginx/angular_access.log;
 }
