--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -1,6 +1,14 @@
 FROM node:8-alpine
 
-RUN apk add --update bash
+ARG UID
+ARG GID
+
+RUN deluser --remove-home node \
+  && addgroup -S node -g ${GID} \
+  && adduser -S -G node -u ${UID} node \
+  && apk add --update bash
+
+USER node
 
 WORKDIR /app
 
