--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,18 +1,15 @@
 FROM debian:jessie
 
-MAINTAINER Maxence POUTORD <maxence.poutord@gmail.com>
-
-RUN apt-get update && apt-get install -y \
-    nginx
+RUN apt-get update && apt-get install -y nginx
 
 ADD nginx.conf /etc/nginx/
 ADD symfony.conf /etc/nginx/sites-available/
 ADD angular.conf /etc/nginx/sites-available/
 
-RUN ln -s /etc/nginx/sites-available/symfony.conf /etc/nginx/sites-enabled/symfony \
+RUN echo "symfony.local localhost\nangular.local localhost" >> /etc/hosts \
+    && ln -s /etc/nginx/sites-available/symfony.conf /etc/nginx/sites-enabled/symfony \
     && ln -s /etc/nginx/sites-available/angular.conf /etc/nginx/sites-enabled/angular \
-    && rm /etc/nginx/sites-enabled/default \
-    && echo "symfony.local localhost\nangular.local localhost" >> /etc/hosts
+    && rm /etc/nginx/sites-enabled/default
 
 RUN echo "upstream php-upstream { server php:9000; }" > /etc/nginx/conf.d/upstream.conf
 
